--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -98,8 +98,8 @@
                     {% for customer in customers %}
                         <!-- Post preview-->
                         <div class="post-preview">
-                            <h2 class="post-title">Este es cliente {{ customer.name }}</h2>
-                            <h3 class="post-subtitle">Que tiene el código: {{ customer.code }}</h3>
+                            <h3 class="post-title">Este es el cliente {{ customer.name }}</h3>
+                            <h4 class="post-subtitle">Que tiene el código: {{ customer.code }}</h4>
                             <p class="post-meta">
                                 Creado por
                                 <a href="#!">Start Bootstrap</a> 
@@ -110,6 +110,36 @@
                         <hr class="my-4" />
                     {% endfor %}
                     {% endif %}
+                    <h2>Buscador de Productos</h2>
+                    <form action="{% url 'home:search' %}" method="GET">
+                        <div>
+                            <input type="text" name="search_param" id="product_code_or_description" placeholder="Buscar.."
+                            {% if search_param %} value="{{ search_param }}" {% endif %}
+                            >
+                            <input type="submit" value="Buscar">
+                            <a style="color: blue" href="{% url 'home:index' %}"><i class="fa fa-undo"></i></a>
+                        </div>
+                    </form>
+                    <!-- Divider-->
+                    <hr class="my-4" />
+
+                    <!-- Si hay resultados en el buscador los presenta -->
+                    {% if products %}
+                    {% for product in products %}
+                        <!-- Post preview-->
+                        <div class="post-preview">
+                            <h3 class="post-title">Este es el producto {{ product.description }}</h3>
+                            <h4 class="post-subtitle">Que tiene el código: {{ product.code }}</h4>
+                            <p class="post-meta">
+                                Creado por
+                                <a href="#!">Start Bootstrap</a> 
+                                en {{ product.created_at }}
+                            </p>
+                        </div>
+                        <!-- Divider-->
+                        <hr class="my-4" />
+                    {% endfor %}
+                    {% endif %}    
                     {% endblock %}
                 </div>
             </div>
