--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -43,7 +43,7 @@
         </nav>
         {% block tp_final_header %}
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('../../static/home/assets/img/home-bg.jpg')">
+        <header class="masthead" style="background-image: url('../../static/home/assets/img/head.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -175,7 +175,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Comision 43765 Coder House 2022</div>
                     </div>
                 </div>
             </div>
