--- a/tp_final/payment/templates/payment/payment_list.html
+++ b/tp_final/payment/templates/payment/payment_list.html
@@ -25,7 +25,7 @@ Payment
     {% for payment in payments %}
         <!-- Post preview-->
         <div class="post-preview">
-            <h3 class="post-title">Descripcion condicion de pago: {{ payment.code }} | {{ payment.name }}</h3>
+            <h3 class="post-title"> Cod: {{ payment.code }} | Cond Pago: {{ payment.name }}</h3>
             <h5 class="post-title">Dias permitidos: {{ payment.days }}</h5>
             <p class="post-meta">
                 Creado por
