--- a/tp_final/product/templates/product/product_list.html
+++ b/tp_final/product/templates/product/product_list.html
@@ -25,8 +25,8 @@ Product
     {% for product in products %}
         <!-- Post preview-->
         <div class="post-preview">
-            <h3 class="post-title">Este es el producto: {{ product.code }} | {{ product.description }}</h3>
-            <h5 class="post-subtitle">Cantidades vendidas ultimo mes: {{ product.unit_sales }}</h5>
+            <h3 class="post-title"> Cod: {{ product.code }} | Producto: {{ product.description }}</h3>
+            <h5 class="post-subtitle"> Unidades vendidas ultimo mes: {{ product.unit_sales }}</h5>
             <p class="post-meta">
                 Creado por
                 <a href="#!">Start Bootstrap</a> 
