--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -87,7 +87,7 @@
                             {% if search_customer %} value="{{ search_customer }}" {% endif %}
                             >
                             <input type="submit" value="Buscar">
-                            <a style="color: blue" href="{% url 'home:index' %}"><i class="fa fa-undo"></i></a>
+                            <a style="color: green" href="{% url 'home:index' %}"><i class="fa fa-undo"></i></a>
                         </div>
                     </form>
                     <!-- Divider-->
@@ -118,7 +118,7 @@
                             {% if search_product %} value="{{ search_product }}" {% endif %}
                             >
                             <input type="submit" value="Buscar">
-                            <a style="color: blue" href="{% url 'home:index' %}"><i class="fa fa-undo"></i></a>
+                            <a style="color: green" href="{% url 'home:index' %}"><i class="fa fa-undo"></i></a>
                         </div>
                     </form>
                     <!-- Divider-->
