--- a/tp_final/credit/templates/credit/credit_detail.html
+++ b/tp_final/credit/templates/credit/credit_detail.html
@@ -36,11 +36,11 @@ Credit detail
     <p class="card-text ">{{ credit.description|safe }}</p> <!-- ckeditor-->
     <p style="text-align: center">
         <a href="{% url 'credit:credit-update' credit.id %}">
-            <i class="fa fa-pencil" style="color: #1c1c91;"></i> Editar
+            <i class="fa fa-pencil" style="color: #008000;"></i> Editar
         </a>
         &ensp; | &ensp;
         <a href="{% url 'credit:credit-delete' credit.id %}">
-            <i class="fa fa-trash" style="color: #881a1a;"></i> Eliminar 
+            <i class="fa fa-trash" style="color: #ff0000;"></i> Eliminar 
         </a>
     </p>
 </div>
