--- a/tp_final/customer/templates/customer/comment_confirm_delete.html
+++ b/tp_final/customer/templates/customer/comment_confirm_delete.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block tp_final_title %}
-Customer delete
+Comentario delete
 {% endblock %}
 
 {% block tp_final_header %}
@@ -11,8 +11,8 @@ Customer delete
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-15 col-lg-16 col-xl-14">
                 <div class="site-heading">
-                    <h1>{{ customer.name }}</h1>
-                    <span class="subheading">Eliminar Cliente</span>
+                    <h1>Eliminar Comentario</h1>
+                    <span class="subheading">Creado por: {{ comment.owner.first_name }} {{ comment.owner.last_name }}</span>
                 </div>
             </div>
         </div>
@@ -23,12 +23,13 @@ Customer delete
 
 {% block tp_final_content %}
 
-<h1>Estás seguro de eliminar el Cliente: {{ customer.name }}?</h1>
+<h1>Estás seguro de eliminar el siguiente Comentario?</h1>
+<p>{{ comment.text }}</p>
 
 <form action="" method="POST">
     {% csrf_token %}
     <input class="btn btn-danger" type="submit" value="Si, eliminar.">
-    <a class="btn btn-primary" href="{% url 'customer:customer-list' %}" >Cancelar</a>
+    <a class="btn btn-primary" href="{% url 'customer:customer-detail' comment.customer.id %}" >Cancelar</a>
 </form>
 
 {% endblock %}
