--- a/tp_final/customer/templates/customer/customer_list.html
+++ b/tp_final/customer/templates/customer/customer_list.html
@@ -31,64 +31,13 @@ Customer list
             </a>    
             <p class="post-meta">
                 Creado por
-                <a href="#!">Start Bootstrap</a> 
-                en {{ customer.created_at }}
+                <span style="color: #0b4956;" href="">{{ customer.owner.username }}</span>
+                ( {{ customer.created_at }} )
             </p>
         </div>
         <!-- Divider-->
         <hr class="my-4" />
     {% endfor %}
-
-    <!--Pagination-->
-    <div class="container p-4">
-        <div class="pagination justify-content-center">
-            <span class="step-links">
-                {% if customer_list.has_previous %}
-                    <a href="?page=1">&laquo; first</a> |
-                    <a href="?page={{ customer_list.previous_page_number }}">previous</a> |
-                {% endif %}
-    
-                {% if customer_list.paginator.num_pages > 1 %}
-                <span class="current">
-                    Page {{ customer_list.number }} of {{ customer_list.paginator.num_pages }} |
-                </span>
-                {% endif %}
-    
-                {% if customer_list.has_next %}
-                    <a href="?page={{ customer_list.next_page_number }}">next</a> |
-                    <a href="?page={{ customer_list.paginator.num_pages }}">last &raquo;</a>
-                {% endif %}
-            </span>
-        </div>
-    </div>
-    <!--end of Pagination-->
-
-    <!--Pagination Class Based Views-->
-    {% if is_paginated %}
-    <div class="container p-4">
-        <div class="pagination justify-content-center">
-            <span class="step-links">
-                {% if page_obj.has_previous %}
-                   <a href="?page=1">&laquo; first</a> |
-                   <a href="?page={{ customer_list.previous_page_number }}">previous</a> |
-                {% endif %}
-                
-                {% if page_obj.paginator.num_pages > 1 %}
-                <span class="current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} |
-                </span>
-               {% endif %}
-
-               {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">next</a> |
-                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-               {% endif %}
-            </span>
-        </div>
-    </div>
-    {% endif %}
-    <!--end of Pagination-->
-
 {% endblock %}
  
     
