--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light topbar" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'home:index' %}">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,6 +37,15 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'product:product-list' %}">Productos</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'credit:credit-list' %}">Limite de credito</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'payment:payment-list' %}">Condicion de pago</a></li>
+
+                        <div class="topbar-divider d-none d-sm-block"></div>
+                       
+                        {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'home:user-update' %}">Editar usuario</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'logout' %}">Cerrar Sesión - {{ user.username }}</a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'login' %}">Iniciar Sesión</a></li>
+                        {% endif %}                        
                     </ul>
                 </div>
             </div>
@@ -48,8 +57,13 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
+                            {% if user.is_authenticated %}
+                                <h1>{{ user.first_name }} {{ user.last_name }}</h1>
+                                <h2>Bienvenido</h2>
+                            {% else %}
                             <h2>Entrega Final - Diego Muro</h2>
                             <span class="subheading"> Coder House 2022 - Python</span>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -103,8 +117,8 @@
                             </a>                            
                             <p class="post-meta">
                                 Creado por
-                                <a href="#!">Start Bootstrap</a> 
-                                en {{ customer.created_at }}
+                                <span style="color: #0b4956;" href="">{{ customer.owner.username }}</span>
+                                ( {{ customer.created_at }} )
                             </p>
                         </div>
                         <!-- Divider-->
@@ -144,6 +158,34 @@
                     {% endfor %}
                     {% endif %}    
                     {% endblock %}
+
+                    {% block pagination %}
+                        <!--Pagination Class Based Views-->
+                        {% if is_paginated %}
+                        <div class="container p-4">
+                            <div class="pagination justify-content-center">
+                                <span class="step-links">
+                                    {% if page_obj.has_previous %}
+                                        <a href="?page=1">&laquo; first</a> |
+                                        <a href="?page={{ customer_list.previous_page_number }}">previous</a> |
+                                    {% endif %}
+                        
+                                    {% if page_obj.paginator.num_pages > 1 %}
+                                    <span class="current">
+                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} |
+                                    </span>
+                                    {% endif %}
+                        
+                                    {% if page_obj.has_next %}
+                                        <a href="?page={{ page_obj.next_page_number }}">next</a> |
+                                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                                    {% endif %}
+                                </span>
+                            </div>
+                        </div>
+                        {% endif %}
+                        <!--end of Pagination-->
+                    {% endblock %}                 
                 </div>
             </div>
         </div>
