--- a/tp_final/home/templates/registration/register.html
+++ b/tp_final/home/templates/registration/register.html
@@ -2,17 +2,17 @@
 {% load static %}
 
 {% block tp_final_title %}
-Customer delete
+Register
 {% endblock %}
 
 {% block tp_final_header %}
-<header class="masthead" style="background-image: url('/static/home/assets/img/about-bg.jpg')">
+<header class="masthead" style="background-image: url('/static/home/assets/img/home-bg.jpg')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-15 col-lg-16 col-xl-14">
                 <div class="site-heading">
-                    <h1>{{ customer.name }}</h1>
-                    <span class="subheading">Eliminar Cliente</span>
+                    <h1>Registrar Nuevo Usuario</h1>
+                    <span class="subheading">Coder House 2022 - Python</span>
                 </div>
             </div>
         </div>
@@ -20,15 +20,12 @@ Customer delete
 </header>
 {% endblock %}
 
-
 {% block tp_final_content %}
-
-<h1>Estás seguro de eliminar el Cliente: {{ customer.name }}?</h1>
 
 <form action="" method="POST">
     {% csrf_token %}
-    <input class="btn btn-danger" type="submit" value="Si, eliminar.">
-    <a class="btn btn-primary" href="{% url 'customer:customer-list' %}" >Cancelar</a>
+    {{ form.as_p }}
+    <input type="submit" class="btn btn-primary" value="Registrar usuario" />
 </form>
 
 {% endblock %}
