--- a/tp_final/home/templates/registration/change-password-done.html
+++ b/tp_final/home/templates/registration/change-password-done.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block tp_final_title %}
-Password Change
+Password Change Success
 {% endblock %}
 
 {% block tp_final_header %}
