--- a/tp_final/home/templates/registration/change-password.html
+++ b/tp_final/home/templates/registration/change-password.html
@@ -2,16 +2,16 @@
 {% load static %}
 
 {% block tp_final_title %}
-Login
+Change Password
 {% endblock %}
 
 {% block tp_final_header %}
-<header class="masthead" style="background-image: url('/static/home/assets/img/home-bg.jpg')">
+<header class="masthead" style="background-image: url('/static/home/assets/img/header-light.jpg')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-15 col-lg-16 col-xl-14">
                 <div class="site-heading">
-                    <h1>Cambiar password</h1>
+                    <h3>Cambiar password</h3>
                     <span class="subheading">Coder House 2022 - Python</span>
                 </div>
             </div>
@@ -22,7 +22,7 @@ Login
 
 {% block tp_final_content %}
 
-<h3>Usuario: {{user.username}}</h3>
+<h4>Usuario: {{user.username}}</h4>
 
 <form action="" method="POST">
     {% csrf_token %}
