--- a/tp_final/customer/templates/customer/customer_form.html
+++ b/tp_final/customer/templates/customer/customer_form.html
@@ -13,7 +13,7 @@ Customer Create-Update
 {% endblock %}
 
 {% block tp_final_header %}
-<header class="masthead" style="background-image: url('../../static/home/assets/img/usuarios.jpg')">
+<header class="masthead" style="background-image: url('/static/home/assets/img/usuarios.jpg')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-15 col-lg-16 col-xl-14">
@@ -29,7 +29,7 @@ Customer Create-Update
 
 {% block tp_final_content %}
     <div>
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.media }} <!-- ckeditor-->
             {{ form.as_p }}
