--- a/tp_final/payment/templates/payment/payment_detail.html
+++ b/tp_final/payment/templates/payment/payment_detail.html
@@ -36,11 +36,11 @@ Payment detail
     <p class="card-text ">{{ payment.description|safe }}</p> <!-- ckeditor-->
     <p style="text-align: center">
         <a href="{% url 'payment:payment-update' payment.id %}">
-            <i class="fa fa-pencil" style="color: #008000;"></i> Editar
+            <i class="fa fa-pencil" style="color: #008000;"></i> Editar cond. pago
         </a>
         &ensp; | &ensp;
         <a href="{% url 'payment:payment-delete' payment.id %}">
-            <i class="fa fa-trash" style="color: #ff0000;"></i> Eliminar 
+            <i class="fa fa-trash" style="color: #ff0000;"></i> Eliminar cond. pago 
         </a>
     </p>
 </div>
